Added new math parser files to VC8 project files

--- a/lsapi/lsapi_vc8.vcproj
+++ b/lsapi/lsapi_vc8.vcproj
@@ -255,15 +255,31 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\MathEvaluate.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MathParser.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MathScanner.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MathToken.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MathValue.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\png_support.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\settings.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SettingsEvalParser.cpp"
 				>
 			</File>
 			<File
@@ -317,15 +333,35 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MathEvaluate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MathException.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MathParser.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MathScanner.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MathToken.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MathValue.h"
+				>
+			</File>
+			<File
 				RelativePath=".\png_support.h"
 				>
 			</File>
 			<File
 				RelativePath=".\SettingsDefines.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SettingsEvalParser.h"
 				>
 			</File>
 			<File
