--- a/litestep/litestep_vc8.vcproj
+++ b/litestep/litestep_vc8.vcproj
@@ -44,6 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;LSAPI_PRIVATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
 				TreatWChar_tAsBuiltInType="true"
 				ForceConformanceInForLoopScope="true"
@@ -52,6 +53,7 @@
 				WarnAsError="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
+				CompileAs="0"
 				DisableSpecificWarnings="4702;4100"
 			/>
 			<Tool
@@ -125,9 +127,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="3"
 				InlineFunctionExpansion="1"
-				FavorSizeOrSpeed="1"
+				FavorSizeOrSpeed="2"
 				OmitFramePointers="false"
 				EnableFiberSafeOptimizations="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;LSAPI_PRIVATE;_SECURE_SCL=0"
@@ -135,7 +137,7 @@
 				BasicRuntimeChecks="0"
 				SmallerTypeCheck="false"
 				RuntimeLibrary="2"
-				BufferSecurityCheck="false"
+				BufferSecurityCheck="true"
 				EnableEnhancedInstructionSet="0"
 				DisableLanguageExtensions="false"
 				TreatWChar_tAsBuiltInType="true"
@@ -143,7 +145,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="false"
-				Detect64BitPortabilityProblems="false"
+				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="0"
 				CompileAs="0"
 				DisableSpecificWarnings="4702;4100"
