Fixed LS logo not showing in about box. Moved logo to the left.

--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -110,13 +110,13 @@ BEGIN
     CONTROL         "List1",IDC_LISTVIEW,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_NOLABELWRAP | LVS_AUTOARRANGE | 
                     LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,10,58,219,100
-    LTEXT           "",IDC_TITLE,10,3,187,16,SS_CENTERIMAGE,
+    LTEXT           "",IDC_TITLE,38,3,187,16,SS_CENTERIMAGE,    
                     WS_EX_TRANSPARENT
-    CONTROL         109,IDC_LOGO,"Static",SS_BITMAP,206,1,32,30
+    CONTROL         IDB_LS,IDC_LOGO,"Static",SS_BITMAP,2,1,32,30
     LTEXT           "",IDC_COMPILETIME,12,168,153,8
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,0,32,241,1
     CONTROL         "",IDC_THEME_INFO,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,
-                    16,18,182,8
+                    44,18,182,8
     EDITTEXT        IDC_EDIT,10,58,219,100,ES_MULTILINE | ES_READONLY | NOT 
                     WS_VISIBLE | WS_VSCROLL
 END
