Fixed invalid vc8 project file version.

--- a/utility/utility_vc8.vcproj
+++ b/utility/utility_vc8.vcproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="utility"
 	ProjectGUID="{2213036F-018C-416A-8A6A-7934C936CFFC}"
+	RootNamespace="utility"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
