--- a/litestep/litestep_vc8.vcproj
+++ b/litestep/litestep_vc8.vcproj
@@ -51,7 +51,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="false"
-				Detect64BitPortabilityProblems="false"
+				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 				CompileAs="0"
 			/>
