--- a/utility/utility_vc8.vcproj
+++ b/utility/utility_vc8.vcproj
@@ -52,7 +52,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
 				WarnAsError="false"
-				Detect64BitPortabilityProblems="false"
+				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 				CompileAs="0"
 			/>
