--- a/litestep/litestep_vc71.vcproj
+++ b/litestep/litestep_vc71.vcproj
@@ -13,8 +13,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="../Debug_VC71"
+			IntermediateDirectory="Debug_VC71"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
@@ -66,8 +66,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="../Release_VC71"
+			IntermediateDirectory="Release_VC71"
 			ConfigurationType="1"
 			CharacterSet="2"
 			WholeProgramOptimization="TRUE">
