Fixed long standing issue of the BangManager being in the wrong folder. Moved BangManager.cpp/h from ./litestep to ./lsapi.

--- a/lsapi/lsapi_vc71.vcproj
+++ b/lsapi/lsapi_vc71.vcproj
@@ -147,7 +147,7 @@
 				RelativePath=".\BangCommand.cpp">
 			</File>
 			<File
-				RelativePath="..\litestep\BangManager.cpp">
+				RelativePath=".\BangManager.cpp">
 			</File>
 			<File
 				RelativePath=".\bangs.cpp">
@@ -221,7 +221,7 @@
 				RelativePath=".\BangCommand.h">
 			</File>
 			<File
-				RelativePath="..\litestep\BangManager.h">
+				RelativePath=".\BangManager.h">
 			</File>
 			<File
 				RelativePath=".\bangs.h">
