Changed a few error strings to use resource macros; added corresponding strings to string table

--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -226,6 +226,8 @@ BEGIN
     IDS_LITESTEP_REGISTERCLASS_ERROR "Error registering window class."
     IDS_MODULEDEPENDENCY_ERROR 
                             "Error: Could not load module.\nThis is likely a case of a missing C Run-Time Library or other dependency."
+    IDS_RECURSIVEVAR        "Error: Variable ""%s"" is defined recursively."
+    IDS_MATHEXCEPTION       "Error in Expression:\n  %s\n\nDescription:\n  %s"
 END
 
 #endif    // English (U.S.) resources
