--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -228,6 +228,7 @@ BEGIN
                             "Error: Could not load module.\nThis is likely a case of a missing C Run-Time Library or other dependency."
     IDS_RECURSIVEVAR        "Error: Variable ""%s"" is defined recursively."
     IDS_MATHEXCEPTION       "Error in Expression:\n  %s\n\nDescription:\n  %s"
+    IDS_LSAPI_INIT_ERROR    "Failed to initialize the LiteStep API."
 END
 
 #endif    // English (U.S.) resources
