--- a/litestep/litestep_vc8.vcproj
+++ b/litestep/litestep_vc8.vcproj
@@ -81,6 +81,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="litestep.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -178,6 +179,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="litestep.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -324,7 +326,7 @@
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;manifest"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
@@ -333,6 +335,10 @@
 			</File>
 			<File
 				RelativePath=".\litestep.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\litestep.manifest"
 				>
 			</File>
 			<File
