--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -229,6 +229,7 @@ BEGIN
     IDS_RECURSIVEVAR        "Error: Variable ""%s"" is defined recursively."
     IDS_MATHEXCEPTION       "Error in Expression:\n  %s\n\nDescription:\n  %s"
     IDS_LSAPI_INIT_ERROR    "Failed to initialize the LiteStep API."
+    IDS_LITESTEP_INIT_ERROR "Failed to initialize LiteStep.\nPlease contact the LiteStep development team.\n\nError code: 0x%.8X"
 END
 
 #endif    // English (U.S.) resources
