--- a/lsapi/lsapi.rc
+++ b/lsapi/lsapi.rc
@@ -27,8 +27,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,24,7,0
- PRODUCTVERSION 0,24,7,0
+ FILEVERSION 0,25,0,0
+ PRODUCTVERSION 0,25,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,13 @@ BEGIN
             VALUE "Comments", "http://www.lsdev.org/"
             VALUE "CompanyName", "LiteStep Development Team"
             VALUE "FileDescription", "LiteStep Module API"
-            VALUE "FileVersion", "0, 24, 7, 0"
-            VALUE "InternalName", "LSAPI"
+            VALUE "FileVersion", "0.25.0 Pre"
+            VALUE "InternalName", "LiteStep API"
             VALUE "LegalCopyright", "Copyright © 1997 - 2008"
             VALUE "OriginalFilename", "lsapi.dll"
             VALUE "ProductName", "LiteStep"
-            VALUE "ProductVersion", "0, 24, 7, 0"
+            VALUE "ProductVersion", "0.25.0 Pre"
+            VALUE "SpecialBuild", "CVS HEAD Test Release"
         END
     END
     BLOCK "VarFileInfo"
