--- a/lsapi/lsapi.rc
+++ b/lsapi/lsapi.rc
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "http://www.lsdev.org/"
             VALUE "CompanyName", "LiteStep Development Team"
             VALUE "FileDescription", "LiteStep Module API"
-            VALUE "FileVersion", "0.25.0 Pre"
+            VALUE "FileVersion", "0.25.0 Alpha"
             VALUE "InternalName", "LiteStep API"
-            VALUE "LegalCopyright", "Copyright © 1997 - 2008"
+            VALUE "LegalCopyright", "Copyright © 1997 - 2009"
             VALUE "OriginalFilename", "lsapi.dll"
             VALUE "ProductName", "LiteStep"
-            VALUE "ProductVersion", "0.25.0 Pre"
+            VALUE "ProductVersion", "0.25.0 Alpha"
             VALUE "SpecialBuild", "CVS HEAD Test Release"
         END
     END
