Fixed LS_USE_PICOPNG usage. Added picopng files to VC8 project files

--- a/lsapi/lsapi_vc8.vcproj
+++ b/lsapi/lsapi_vc8.vcproj
@@ -278,6 +278,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\picopng.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\png_support.cpp"
 				>
 			</File>
@@ -357,6 +361,10 @@
 			</File>
 			<File
 				RelativePath=".\MathValue.h"
+				>
+			</File>
+			<File
+				RelativePath=".\picopng.h"
 				>
 			</File>
 			<File
