Header include order fixes

--- a/utility/utility_vc8.vcproj
+++ b/utility/utility_vc8.vcproj
@@ -204,6 +204,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\fixup.h"
+				>
+			</File>
+			<File
 				RelativePath=".\ILiteStep.h"
 				>
 			</File>
