Updated !about dialog default fonts to fail gracefully on Win95.

--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -133,9 +133,9 @@ END
 //
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 240, 185
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION
+STYLE DS_MODALFRAME | DS_SHELLFONT | WS_POPUP | WS_CAPTION
 CAPTION "About LiteStep..."
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "",IDC_HEADER,0,0,239,32
     DEFPUSHBUTTON   "OK",IDOK,179,165,50,14
