Brought VC7.1 hook project up to date.

--- a/hook/hook_vc71.vcproj
+++ b/hook/hook_vc71.vcproj
@@ -140,6 +140,9 @@
 			<File
 				RelativePath=".\Hook.cpp">
 			</File>
+			<File
+				RelativePath=".\Hook.def">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -153,6 +156,12 @@
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			<File
+				RelativePath=".\hook.rc">
+			</File>
+			<File
+				RelativePath=".\resource.h">
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
