--- a/lsapi/lsapi.rc
+++ b/lsapi/lsapi.rc
@@ -47,13 +47,12 @@ BEGIN
             VALUE "Comments", "http://www.lsdev.org/\0"
             VALUE "CompanyName", "LiteStep Development Team\0"
             VALUE "FileDescription", "LiteStep Module API\0"
-            VALUE "FileVersion", "0.24.8 RC2 Pre\0"
+            VALUE "FileVersion", "0.24.8\0"
             VALUE "InternalName", "LiteStep API\0"
             VALUE "LegalCopyright", "Copyright © 1997 - 2009\0"
             VALUE "OriginalFilename", "lsapi.dll\0"
             VALUE "ProductName", "LiteStep\0"
-            VALUE "ProductVersion", "0.24.8 RC2 Pre\0"
-            VALUE "SpecialBuild", "Release Candidate 2\0"
+            VALUE "ProductVersion", "0.24.8\0"
         END
     END
     BLOCK "VarFileInfo"
