Added files for the ExplorerService

--- a/litestep/litestep_vc12.vcxproj
+++ b/litestep/litestep_vc12.vcxproj
@@ -230,12 +230,14 @@
     <ClCompile Include="DDEService.cpp" />
     <ClCompile Include="DDEStub.cpp" />
     <ClCompile Include="DDEWorker.cpp" />
+    <ClCompile Include="ExplorerService.cpp" />
     <ClCompile Include="FullscreenMonitor.cpp" />
     <ClCompile Include="litestep.cpp" />
     <ClCompile Include="MessageManager.cpp" />
     <ClCompile Include="Module.cpp" />
     <ClCompile Include="ModuleManager.cpp" />
     <ClCompile Include="RecoveryMenu.cpp" />
+    <ClCompile Include="ShellDesktopTray.cpp" />
     <ClCompile Include="StartupRunner.cpp" />
     <ClCompile Include="TrayNotifyIcon.cpp" />
     <ClCompile Include="TrayService.cpp" />
@@ -247,12 +249,14 @@
     <ClInclude Include="DDEService.h" />
     <ClInclude Include="DDEStub.h" />
     <ClInclude Include="DDEWorker.h" />
+    <ClInclude Include="ExplorerService.h" />
     <ClInclude Include="FullscreenMonitor.h" />
     <ClInclude Include="litestep.h" />
     <ClInclude Include="MessageManager.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleManager.h" />
     <ClInclude Include="RecoveryMenu.h" />
+    <ClInclude Include="ShellDesktopTray.h" />
     <ClInclude Include="StartupRunner.h" />
     <ClInclude Include="TrayAppBar.h" />
     <ClInclude Include="TrayNotifyIcon.h" />
