--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -231,6 +231,7 @@ BEGIN
     IDS_MODULEDEPENDENCY_ERROR 
     "Error: Could not load module.\nThis is likely a case of a missing C Run-Time Library or other dependency.\nError Information:\n"
     IDS_RECURSIVEVAR        "Error: Variable ""%s"" is defined recursively."
+    IDS_RECURSIVEINCLUDE    "Error: Reursive include detected!\n%s"
     IDS_MATHEXCEPTION       "Error in Expression:\n  %s\n\nDescription:\n  %s"
     IDS_LSAPI_INIT_ERROR    "Failed to initialize the LiteStep API."
     IDS_LITESTEP_INIT_ERROR "Failed to initialize LiteStep.\nPlease contact the LiteStep development team.\n\nError code: 0x%.8X"
